fix container alignment
(mostly)

--- a/assets/styles/theme.scss
+++ b/assets/styles/theme.scss
@@ -4,7 +4,6 @@ $contrast: $white;
 
 .container {
   padding: 0;
-  margin: 0;
 }
 
 .container-fluid {
@@ -12,9 +11,7 @@ $contrast: $white;
 }
 
 .create-med-btn {
-  display: absolute;
   float: right;
-  right: 0;
 
   @media screen and (min-width: 0px) and (max-width: 767px) {
     display: none;
